# Photo-SLAM

./: .gitignore  CMakeLists.txt  README.md  build.sh
ORB-SLAM3/: .gitignore  CMakeLists.txt  Dependencies.md  README.md
ORB-SLAM3/include/: Atlas.h  Frame.h  KeyFrame.h  LoopClosing.h  Map.h  MapDrawer.h  MapPoint.h  Optimizer.h  Settings.h  System.h  Tracking.h  Viewer.h
ORB-SLAM3/src/: Atlas.cc  Frame.cc  KeyFrame.cc  LocalMapping.cc  LoopClosing.cc  Map.cc  MapDrawer.cc  MapPoint.cc  Optimizer.cc  Settings.cc  System.cc  Tracking.cc  TwoViewReconstruction.cc  Viewer.cc
cfg/ORB_SLAM3/Monocular/Replica/: office0.yaml  office4.yaml
cfg/ORB_SLAM3/Monocular/TUM/: tum_freiburg1_desk.yaml  tum_freiburg2_xyz.yaml  tum_freiburg3_long_office_household.yaml
cfg/ORB_SLAM3/RGB-D/RealCamera/: realsense_d455_rgbd.yaml
cfg/ORB_SLAM3/RGB-D/Replica/: office0.yaml  office1.yaml  office2.yaml  room2.yaml
cfg/ORB_SLAM3/RGB-D/TUM/: tum_freiburg1_desk.yaml  tum_freiburg2_xyz.yaml  tum_freiburg3_long_office_household.yaml
cfg/ORB_SLAM3/Stereo/EuRoC/: EuRoC.yaml
cfg/colmap/: gaussian_splatting.yaml
cfg/gaussian_mapper/Monocular/ETH3D/: eth3d_mono.yaml  eth3d_planar_2.yaml
cfg/gaussian_mapper/Monocular/Replica/: replica_mono.yaml  room1.yaml
cfg/gaussian_mapper/Monocular/TUM/: tum_freiburg1_desk.yaml  tum_mono.yaml
cfg/gaussian_mapper/RGB-D/ETH3D/: eth3d_desk_3.yaml  eth3d_rgbd.yaml
cfg/gaussian_mapper/RGB-D/RealCamera/: realsense_rgbd.yaml
cfg/gaussian_mapper/RGB-D/Replica/: office3.yaml  replica_rgbd.yaml
cfg/gaussian_mapper/RGB-D/TUM/: tum_freiburg1_desk.yaml  tum_rgbd.yaml
cfg/gaussian_mapper/Stereo/EuRoC/: EuRoC.yaml
cfg/gaussian_mapper/Stereo/KITTI/: KITTI.yaml
cfg/view_only/: camera_euroc.yaml  camera_replica.yaml  camera_tum_fr1.yaml  camera_tum_fr2.yaml  camera_tum_fr3.yaml  view_only.yaml
cuda_rasterizer/: operate_points.h  stereo_vision.h
examples/: euroc_stereo.cpp  realsense_rgbd.cpp  replica_mono.cpp  replica_rgbd.cpp  train_colmap.cpp  tum_mono.cpp  tum_rgbd.cpp  view_result.cpp
include/: camera.h  gaussian_keyframe.h  gaussian_mapper.h  gaussian_model.h  gaussian_parameters.h  gaussian_rasterizer.h  gaussian_renderer.h  gaussian_scene.h  gaussian_trainer.h  general_utils.h  graphics_utils.h  loss_utils.h  operate_points.h  point2d.h  point3d.h  point_cloud.h  rasterize_points.h  sh_utils.h  stereo_vision.h  tensor_utils.h  types.h
scripts/: all.sh  colmap.sh  download_euroc.sh  download_replica.sh  download_tum.sh  euroc_stereo.sh  realsense_d455.sh  replica_mono.sh  replica_rgbd.sh  tum_mono.sh  tum_rgbd.sh
src/: gaussian_keyframe.cpp  gaussian_mapper.cpp  gaussian_model.cpp  gaussian_parameters.cpp  gaussian_rasterizer.cpp  gaussian_renderer.cpp  gaussian_scene.cpp  gaussian_trainer.cpp  operate_points.cu  rasterize_points.cu  stereo_vision.cu
viewer/: drawer_utils.h  imgui_viewer.cpp  imgui_viewer.h  map_drawer.cpp  map_drawer.h
